bootstrap file correction

--- a/index.html
+++ b/index.html
@@ -180,34 +180,34 @@
     <div class="row py-3">
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="/img/projects-1.jpeg" class="img-fluid img-thumbnail" alt="project" />
+        <img src="/Bootstrap/setup/img/projects-6.jpeg" class="img-fluid img-thumbnail" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="/img/projects-2.jpeg" class="img-fluid img-thumbnail" alt="project" />
+        <img src="/Bootstrap/setup/img/projects-5.jpeg" class="img-fluid img-thumbnail" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="/img/projects-3.jpeg" class="img-fluid img-thumbnail mx-auto" alt="project" />
+        <img src="/Bootstrap/setup/img/projects-4.jpeg" class="img-fluid img-thumbnail mx-auto" alt="project" />
       </div>
       <!-- end of single project -->
     </div>
     <div class="row py-3 no-gutters">
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="/img/projects-4.jpeg" class="img-fluid" alt="project" />
+        <img src="/Bootstrap/setup/img/projects-3.jpeg" class="img-fluid" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="/img/projects-5.jpeg" class="img-fluid" alt="project" />
+        <img src="/Bootstrap/setup/img/projects-2.jpeg" class="img-fluid" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="/img/projects-6.jpeg" class="img-fluid" alt="project" />
+        <img src="/Bootstrap/setup/img/projects-1.jpeg" class="img-fluid" alt="project" />
       </div>
       <!-- end of single project -->
     </div>
@@ -232,7 +232,7 @@
       <!-- team member -->
       <div class="col-md-6 col-lg-4 my-3">
         <div class="card">
-          <img src="img/team-1.jpg" class="card-img-top" alt="member" />
+          <img src="/Bootstrap/setup/img/team-5.jpg" class="card-img-top" alt="member" />
           <div class="card-body">
             <h5 class="card-title text-capitalize">team member</h5>
             <p class="card-text">
@@ -254,7 +254,7 @@
       <!-- team member -->
       <div class="col-md-6 col-lg-4 my-3">
         <div class="card">
-          <img src="img/team-2.jpg" class="card-img-top" alt="member" />
+          <img src="/Bootstrap/setup/img/team-4.jpg" class="card-img-top" alt="member" />
           <div class="card-body">
             <h5 class="card-title text-capitalize">team member</h5>
             <p class="card-text">
@@ -276,7 +276,7 @@
       <!-- team member -->
       <div class="col-md-6 col-lg-4 my-3 mx-auto">
         <div class="card">
-          <img src="img/team-3.jpg" class="card-img-top" alt="member" />
+          <img src="BootStrap4/img/team-3.jpg" class="card-img-top" alt="member" />
           <div class="card-body">
             <h5 class="card-title text-capitalize">team member</h5>
             <p class="card-text">
@@ -298,7 +298,7 @@
       <!-- team member -->
       <div class="col-md-6 col-lg-4 my-3">
         <div class="card">
-          <img src="img/team-4.jpg" class="card-img-top" alt="member" />
+          <img src="/Bootstrap/setup/img/team-2.jpg" class="card-img-top" alt="member" />
           <div class="card-body">
             <h5 class="card-title text-capitalize">team member</h5>
             <p class="card-text">
@@ -321,7 +321,7 @@
       <!-- team member -->
       <div class="col-md-6 col-lg-4 my-3 mx-auto">
         <div class="card">
-          <img src="img/team-5.jpg" class="card-img-top" alt="member" />
+          <img src="/Bootstrap/setup/img/team-1.jpg" class="card-img-top" alt="member" />
           <div class="card-body">
             <h5 class="card-title text-capitalize">team member</h5>
             <p class="card-text">
@@ -368,18 +368,18 @@
             <li data-target="#example" data-slide-to="3"></li>
           </ul>
           <!-- images -->
-          <div class="carousel-inner">
-            <div class="carousel-item">
-              <img src="img/projects-1.jpeg" alt="project" class="d-block w-100" />
+          <div class="carousel-inner my-3">
+            <div class="carousel-item active">
+              <img src="/Bootstrap/setup/img/projects-1.jpeg" alt="project" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="img/projects-2.jpeg" alt="project" class="d-block w-100" />
+              <img src="/Bootstrap/setup/img/projects-2.jpeg" alt="project" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="img/projects-3.jpeg" alt="project" class="d-block w-100" />
+              <img src="/Bootstrap/setup/img/projects-3.jpeg" alt="project" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="img/projects-4.jpeg" alt="project" class="d-block w-100" />
+              <img src="/Bootstrap/setup/img/projects-4.jpeg" alt="project" class="d-block w-100">
             </div>
           </div>
           <!-- end of images -->
