Carousel made with controls slider

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       <!-- team member -->
       <div class="col-md-6 col-lg-4 my-3 mx-auto">
         <div class="card">
-          <img src="BootStrap4/img/team-3.jpg" class="card-img-top" alt="member" />
+          <img src="/Bootstrap/setup/img/team-6.jpg" class="card-img-top" alt="member" />
           <div class="card-body">
             <h5 class="card-title text-capitalize">team member</h5>
             <p class="card-text">
@@ -316,6 +316,28 @@
         </div>
       </div>
 
+      <!-- End team member -->
+
+      <!-- team member -->
+      <div class="col-md-6 col-lg-4 my-3 mx-auto">
+        <div class="card">
+          <img src="/Bootstrap/setup/img/team-1.jpg" class="card-img-top" alt="member" />
+          <div class="card-body">
+            <h5 class="card-title text-capitalize">team member</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Recusandae, ullam.
+            </p>
+            <a href="" class="btn btn-outline-warning text-uppercase">press here</a>
+          </div>
+          <div class="card-footer bg-secondary d-flex justify-content-start">
+            <a href="#"><i class="fab fa-facebook fa-2x text-dark"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-2x text-dark"></i></a>
+            <a href="#"><i class="fab fa-youtube fa-2x text-dark"></i></a>
+            <a href="#"><i class="fab fa-google fa-2x text-dark"></i></a>
+          </div>
+        </div>
+      </div>
       <!-- End team member -->
 
       <!-- team member -->
@@ -383,11 +405,32 @@
             </div>
           </div>
           <!-- end of images -->
+          <!-- controls -->
+          <a href="#example" class="carousel-control-prev" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a href="#example" class="carousel-control-next" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
         </div>
       </div>
     </div>
   </section>
   <!-- End of Carousel section -->
+  <!-- filler section -->
+  <section id="filler" class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 mx-auto text-center">
+          <h1 class="text-danger">my first bootstrap website</h1>
+          <p class="lead text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, maxime.</p>
+          <a href="#" class="btn btn-large btn-primary m-2">press here</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End filler section -->
+
 
   <!-- jquery -->
   <script src="./js/jquery-3.3.1.min.js"></script>
