Contact section created, simple form added and embedded googl map

--- a/index.html
+++ b/index.html
@@ -600,6 +600,77 @@
       </div>
     </section>
     <!-- End of Blog -->
+    <!-- Contact Section -->
+    <section id="contact" class="py-5 bg-warning">
+      <div class="container">
+        <!-- Section title -->
+        <div class="row">
+          <div class="col text-center">
+            <h1 class="display-4 text-uppercase text-dark mb-0">
+              <strong>Contact Section</strong>
+            </h1>
+            <div class="title-underline bg-primary"></div>
+            <p class="m-2 text-capitalize text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+              doloribus?
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- End of section-title -->
+      <div class="row">
+        <div class="col-md-6 my-3">
+          <div class="card card-body bg-secondary">
+            <div class="card-title text-center text-white">
+              <h2 class="text-capitalize">new to bootstrap?</h2>
+              <p>new user sign in</p>
+            </div>
+            <!-- end of title -->
+            <!-- Simple form -->
+            <form>
+              <div class="form-group mt-3">
+                <input
+                  type="text"
+                  id="name"
+                  class="form-control form-control-lg"
+                />
+              </div>
+              <!-- email -->
+              <div class="form-group mt-3">
+                <input
+                  type="email"
+                  id="name"
+                  class="form-control form-control-lg"
+                />
+              </div>
+              <!-- Phone -->
+              <div class="form-group mt-3">
+                <input
+                  type="text"
+                  id="name"
+                  class="form-control form-control-lg"
+                />
+              </div>
+            </form>
+          </div>
+        </div>
+        <!-- Google maps -->
+        <div class="col-md-6 my-3">
+          <div class="embed-responsive embed-responsive-4by3">
+            <iframe
+              class="embed-responsive-item"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d380513.7061327217!2d-88.01146493254033!3d41.833394162389105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2sChicago%2C%20IL!5e0!3m2!1sen!2sus!4v1596050086664!5m2!1sen!2sus"
+              width="600"
+              height="450"
+              frameborder="0"
+              style="border:0"
+              allowfullscreen=""
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- EndContact Section -->
 
     <!-- jquery -->
     <script src="./js/jquery-3.3.1.min.js"></script>
