Review section complted

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <!-- single project -->
         <div class="col-sm-6 col-md-4 my-3">
           <img
-            src="/Bootstrap/setup/img/projects-6.jpeg"
+            src="/Bootstrap/setup/BootStrap4/img/projects-6.jpeg"
             class="img-fluid img-thumbnail"
             alt="project"
           />
@@ -218,7 +218,7 @@
         <!-- single project -->
         <div class="col-sm-6 col-md-4 my-3">
           <img
-            src="/Bootstrap/setup/img/projects-5.jpeg"
+            src="/Bootstrap/setup/BootStrap4/img/projects-5.jpeg"
             class="img-fluid img-thumbnail"
             alt="project"
           />
@@ -227,7 +227,7 @@
         <!-- single project -->
         <div class="col-sm-6 col-md-4 my-3">
           <img
-            src="/Bootstrap/setup/img/projects-4.jpeg"
+            src="/Bootstrap/setup/BootStrap4/img/projects-4.jpeg"
             class="img-fluid img-thumbnail mx-auto"
             alt="project"
           />
@@ -238,7 +238,7 @@
         <!-- single project -->
         <div class="col-sm-6 col-md-4 my-3">
           <img
-            src="/Bootstrap/setup/img/projects-3.jpeg"
+            src="/Bootstrap/setup/BootStrap4/img/projects-3.jpeg"
             class="img-fluid"
             alt="project"
           />
@@ -247,7 +247,7 @@
         <!-- single project -->
         <div class="col-sm-6 col-md-4 my-3">
           <img
-            src="/Bootstrap/setup/img/projects-2.jpeg"
+            src="/Bootstrap/setup/BootStrap4/img/projects-2.jpeg"
             class="img-fluid"
             alt="project"
           />
@@ -256,7 +256,7 @@
         <!-- single project -->
         <div class="col-sm-6 col-md-4 my-3">
           <img
-            src="/Bootstrap/setup/img/projects-1.jpeg"
+            src="/Bootstrap/setup/BootStrap4/img/projects-1.jpeg"
             class="img-fluid"
             alt="project"
           />
@@ -722,21 +722,22 @@
       <div class="row">
         <div class="col-md-6 my-4">
           <img
-            src="/Bootstrap/setup/img/team-6.jpg"
-            class="img-fluid rounded-circle"
-            alt="team"
+            src="/Bootstrap/setup/BootStrap4/img/team-6.jpg"
+            class="img-fluid rounded-circle d-none d-md-block"
+            alt="team member"
           />
         </div>
-        <div class="col-md-6 my-4"></div>
-        <blockquote class="blockquote text-right">
-          <p>
-            <i class="fas fa-quote-left fa-2x mr-3"></i>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
-            asperiores repellat nisi voluptate tempore odit voluptatibus veniam.
-            Cupiditate, cumque totam!
-          </p>
-          <footer class="blockquote-footer text-left">master coder</footer>
-        </blockquote>
+        <div class="col-md-6 my-4">
+          <blockquote class="blockquote text-right">
+            <p>
+              <i class="fas fa-quote-left fa-2x mr-3"></i>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
+              asperiores repellat nisi voluptate tempore odit voluptatibus
+              veniam. Cupiditate, cumque totam!
+            </p>
+            <footer class="blockquote-footer text-left">master coder </footer>
+          </blockquote>
+        </div>
       </div>
     </section>
 
