--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <div class="col-md-6 col-lg-4 my-3">
           <div class="card">
             <img
-              src="/Bootstrap/setup/img/team-5.jpg"
+              src="/Bootstrap/setup/BootStrap4/img/team-5.jpg"
               class="card-img-top"
               alt="member"
             />
@@ -313,7 +313,7 @@
         <div class="col-md-6 col-lg-4 my-3">
           <div class="card">
             <img
-              src="/Bootstrap/setup/img/team-4.jpg"
+              src="/Bootstrap/setup/BootStrap4/img/team-4.jpg"
               class="card-img-top"
               alt="member"
             />
@@ -343,7 +343,7 @@
         <div class="col-md-6 col-lg-4 my-3 mx-auto">
           <div class="card">
             <img
-              src="/Bootstrap/setup/img/team-6.jpg"
+              src="/Bootstrap/setup/BootStrap4/img/team-6.jpg"
               class="card-img-top"
               alt="member"
             />
@@ -371,7 +371,7 @@
         <div class="col-md-6 col-lg-4 my-3">
           <div class="card">
             <img
-              src="/Bootstrap/setup/img/team-2.jpg"
+              src="/Bootstrap/setup/BootStrap4/img/team-2.jpg"
               class="card-img-top"
               alt="member"
             />
@@ -400,7 +400,7 @@
         <div class="col-md-6 col-lg-4 my-3 mx-auto">
           <div class="card">
             <img
-              src="/Bootstrap/setup/img/team-1.jpg"
+              src="/Bootstrap/setup/BootStrap4/img/team-1.jpg"
               class="card-img-top"
               alt="member"
             />
@@ -428,7 +428,7 @@
         <div class="col-md-6 col-lg-4 my-3 mx-auto">
           <div class="card">
             <img
-              src="/Bootstrap/setup/img/team-1.jpg"
+              src="/Bootstrap/setup/BootStrap4/img/team-6.jpg"
               class="card-img-top"
               alt="member"
             />
@@ -483,28 +483,28 @@
             <div class="carousel-inner my-3">
               <div class="carousel-item active">
                 <img
-                  src="/Bootstrap/setup/img/projects-1.jpeg"
+                  src="/Bootstrap/setup/BootStrap4/img/projects-1.jpeg"
                   alt="project"
                   class="d-block w-100"
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="/Bootstrap/setup/img/projects-2.jpeg"
+                  src="/Bootstrap/setup/BootStrap4/img/projects-2.jpeg"
                   alt="project"
                   class="d-block w-100"
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="/Bootstrap/setup/img/projects-3.jpeg"
+                  src="/Bootstrap/setup/BootStrap4/img/projects-3.jpeg"
                   alt="project"
                   class="d-block w-100"
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="/Bootstrap/setup/img/projects-4.jpeg"
+                  src="/Bootstrap/setup/BootStrap4/img/projects-4.jpeg"
                   alt="project"
                   class="d-block w-100"
                 />
@@ -563,7 +563,7 @@
       <div class="row">
         <div class="col-md-4">
           <img
-            src="/Bootstrap/setup/img/projects-1.jpeg"
+            src="/Bootstrap/setup/BootStrap4/img/team-1.jpg"
             class="img-fluid img-thumbnail"
             alt="projects"
           />
@@ -575,7 +575,7 @@
         </div>
         <div class="col-md-4 mt-3">
           <img
-            src="/Bootstrap/setup/img/projects-2.jpeg"
+            src="/Bootstrap/setup/BootStrap4/img/projects-2.jpeg"
             class="img-fluid img-thumbnail"
             alt="projects"
           />
@@ -587,7 +587,7 @@
         </div>
         <div class="col-md-4 mt-5">
           <img
-            src="/Bootstrap/setup/img/projects-3.jpeg"
+            src="/Bootstrap/setup/BootStrap4/img/projects-3.jpeg"
             class="img-fluid img-thumbnail"
             alt="projects"
           />
@@ -722,7 +722,7 @@
       <div class="row">
         <div class="col-md-6 my-4">
           <img
-            src="/Bootstrap/setup/BootStrap4/img/team-6.jpg"
+            src="/Bootstrap/setup/BootStrap4/img/projects-3.jpeg"
             class="img-fluid rounded-circle d-none d-md-block"
             alt="team member"
           />
@@ -735,13 +735,20 @@
               asperiores repellat nisi voluptate tempore odit voluptatibus
               veniam. Cupiditate, cumque totam!
             </p>
-            <footer class="blockquote-footer text-left">master coder </footer>
+            <footer class="blockquote-footer text-left">master coder</footer>
           </blockquote>
         </div>
       </div>
     </section>
-
     <!-- end of contact section -->
+
+    <!-- Progress section -->
+    <section id="progressbar">
+      <div class="row">
+        <div class="container"></div>
+      </div>
+    </section>
+    <!-- End of Progress section -->
 
     <!-- jquery -->
     <script src="./js/jquery-3.3.1.min.js"></script>
