Progress bar section and pricing section created

--- a/index.html
+++ b/index.html
@@ -576,9 +576,9 @@
         <img src="/img/projects-3.jpeg" class="img-fluid rounded-circle d-none d-md-block" alt="team member" />
       </div>
       <div class="col-md-6 my-4">
-        <blockquote class="blockquote text-right">
+        <blockquote class="blockquote text-right mr-5">
           <p>
-            <i class="fas fa-quote-left fa-2x mr-3"></i>
+            <i class="fas fa-quote-left fa-2x mr-3 "></i>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
             asperiores repellat nisi voluptate tempore odit voluptatibus
             veniam. Cupiditate, cumque totam!
@@ -591,12 +591,153 @@
   <!-- end of contact section -->
 
   <!-- Progress section -->
-  <section id="progressbar">
+  <section id="progressbar" class="py-5">
+    <div class="container">
+      <!-- Section title -->
+      <div class="row">
+        <div class="col text-center">
+          <h1 class="display-4 text-uppercase text-dark mb-0">
+            <strong>Progress</strong>
+          </h1>
+          <div class="title-underline bg-secondary"></div>
+        </div>
+      </div>
+    </div>
+    <!-- End of section-title -->
     <div class="row">
-      <div class="container"></div>
+      <div class="col-md-8 mx-auto">
+        <!-- progress bar Single -->
+        <h1 class="text-white">html</h1>
+        <div class="progress bg-secondary">
+          <div class="progress-bar bg-success" style="width:40%"></div>
+        </div>
+        <!-- End of progress bar Single -->
+        <!-- progress bar Single -->
+        <h1 class="text-white">css</h1>
+        <div class="progress bg-secondary">
+          <div class="progress-bar bg-danger" style="width:40%"></div>
+        </div>
+        <!-- End of progress bar Single -->
+        <!-- progress bar Single -->
+        <h1 class="text-white">js</h1>
+        <div class="progress bg-secondary">
+          <div class="progress-bar bg-warning" style="width:60%"></div>
+        </div>
+        <!-- End of progress bar Single -->
+        <!-- progress bar Single -->
+        <div class="prog my-3 text-white d-flex justify-content-between">
+          <h3>bootstrap</h3>
+          <h3>80%</h3>
+        </div>
+        <div class="progress bg-secondary">
+          <div class="progress-bar" style="width:40%"></div>
+        </div>
+        <!-- End of progress bar Single -->
+      </div>
     </div>
   </section>
   <!-- End of Progress section -->
+
+  <!-- Pricing Section -->
+  <section id="pricing" class="py-5 bg-secondary">
+    <div class="container-fluid">
+      <!--section-title -->
+      <div class="row">
+        <div class="col text-center">
+          <h1 class="display-4 text-uppercase text-dark mb-0">
+            <strong>pricing</strong>
+          </h1>
+          <div class="title-underline bg-primary"></div>
+          <p class="mt-2 text-capitalize text-white">Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+    </div>
+    <!-- end of section-title -->
+    <div class="row">
+      <!-- card -->
+      <div class="col-md-4 my-4 mx-auto">
+        <div class="card">
+          <!-- card header -->
+          <div class="card-header bg-primary text-white text-uppercase text-center py-4">
+            <h3>standard</h3>
+          </div>
+          <!-- card title -->
+          <div class="card-title text-center my-3">
+            <h4>
+              <sup>$</sup>5
+              <sub>/month</sub>
+            </h4>
+          </div>
+          <!-- list -->
+          <ul class="list-group list-group-flush text-center">
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+          </ul>
+          <!-- card footer -->
+          <div class="card-footer">
+            <a href="" class="btn btn-outline-dark btn-block text-capitalize">sign up</a>
+          </div>
+        </div>
+      </div>
+      <!-- end of card -->
+      <!-- card -->
+      <div class="col-md-4 my-4 mx-auto">
+        <div class="card">
+          <!-- card header -->
+          <div class="card-header bg-primary text-white text-uppercase text-center py-4">
+            <h3>basic</h3>
+          </div>
+          <!-- card title -->
+          <div class="card-title text-center my-3">
+            <h4>
+              <sup>$</sup>10
+              <sub>/month</sub>
+            </h4>
+          </div>
+          <!-- list -->
+          <ul class="list-group list-group-flush text-center">
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+          </ul>
+          <!-- card footer -->
+          <div class="card-footer">
+            <a href="" class="btn btn-outline-dark btn-block text-capitalize">sign up</a>
+          </div>
+        </div>
+      </div>
+      <!-- end of card -->
+      <!-- card -->
+      <div class="col-md-4 my-4 mx-auto">
+        <div class="card">
+          <!-- card header -->
+          <div class="card-header bg-primary text-white text-uppercase text-center py-4">
+            <h3>Pro</h3>
+          </div>
+          <!-- card title -->
+          <div class="card-title text-center my-3">
+            <h4>
+              <sup>$</sup>15
+              <sub>/month</sub>
+            </h4>
+          </div>
+          <!-- list -->
+          <ul class="list-group list-group-flush text-center">
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+          </ul>
+          <!-- card footer -->
+          <div class="card-footer">
+            <a href="" class="btn btn-outline-dark btn-block text-capitalize">sign up</a>
+          </div>
+        </div>
+      </div>
+      <!-- end of card -->
+
+  </section>
+  <!-- end of pricing section -->
 
   <!-- jquery -->
   <script src="./js/jquery-3.3.1.min.js"></script>
