--- a/index.html
+++ b/index.html
@@ -17,6 +17,31 @@
 </head>
 
 <body>
+  <!-- Nav Bar -->
+  <nav class="navbar py-3 navbar-light navbar-expand-sm">
+    <!-- logo -->
+    <a href="#" class="navbar-brand text-uppercase font-italic">Adeesh Practice Website</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarLinks">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarLinks">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a href="#header" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#skills" class="nav-link">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a href="#about" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="#projects" class="nav-link">Projects</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- End of Nav bar -->
   <header id="header" class="bg-dark">
     <div class="container">
       <div class="row height align-items-center">
@@ -39,7 +64,7 @@
   <!-- End of Header -->
 
   <!-- Skills Section -->
-  <section id="skill" class="py-5 bg-white">
+  <section id="skills" class="py-5 bg-white">
     <div class="container">
       <!-- title -->
       <div class="row">
@@ -735,9 +760,62 @@
         </div>
       </div>
       <!-- end of card -->
-
+    </div>
   </section>
   <!-- end of pricing section -->
+  <!-- footer -->
+  <footer id="footer" class="bg-dark py-5">
+    <!--section-title -->
+    <div class="row">
+      <div class="col text-center">
+        <h1 class="display-4 text-uppercase text-white mb-0">
+          <strong>footer</strong>
+        </h1>
+        <div class="title-underline bg-primary"></div>
+        <p class="mt-2 text-capitalize text-white">Lorem ipsum dolor sit amet.</p>
+      </div>
+    </div>
+    <!-- end of section-title -->
+    <div class="row">
+      <div class="col text-center">
+        <a href="#" class="btn">
+          <i class="fab fa-facebook fa-3x text-primary m-2"></i>
+        </a>
+        <a href="#" class="btn">
+          <i class="fab fa-twitter fa-3x text-primary m-2"></i>
+        </a>
+        <a href="#" class="btn">
+          <i class="fab fa-instagram fa-3x text-primary m-2"></i>
+        </a>
+        <a href="#" class="btn">
+          <i class="fab fa-google-plus fa-3x text-primary m-2"></i>
+        </a>
+        <button type="button" class="btn btn-danger d-block mx-auto my-3" data-toggle="modal" data-target="#modal">Log
+          out</button>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Modal -->
+  <div class="modal fade" id="modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <!-- modal header -->
+        <div class="modal-header">
+          <h3 class="modal-title">This is a modal</h3>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <!-- modal body -->
+        <div class="modal-body">
+          <p>This is a random text.</p>
+        </div>
+        <!-- modal fooer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- jquery -->
   <script src="./js/jquery-3.3.1.min.js"></script>
