Completed my first bootsrap project

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div class="row py-3">
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="../img/projects-1.jpeg" class="img-fluid img-thumbnail" alt="project" />
+        <img src="/img/projects-1.JPG" class="img-fluid img-thumbnail" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
