trying to fix image problems

--- a/index.html
+++ b/index.html
@@ -205,17 +205,17 @@
     <div class="row py-3">
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="/img/projects-1.JPG" class="img-fluid img-thumbnail" alt="project" />
+        <img src="img/projects-1.jpg" class="img-fluid img-thumbnail" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="../img/projects-5.jpeg" class="img-fluid img-thumbnail" alt="project" />
+        <img src="img/projects-5.jpg" class="img-fluid img-thumbnail" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="/img/projects-4.jpeg" class="img-fluid img-thumbnail mx-auto" 
+        <img src="img/projects-4.jpg" class="img-fluid img-thumbnail mx-auto" 
         alt="project" />
       </div>
       <!-- end of single project -->
@@ -223,17 +223,17 @@
     <div class="row py-3 no-gutters">
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="/img/projects-3.jpeg" class="img-fluid" alt="project" />
+        <img src="img/projects-3.jpg" class="img-fluid" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="/img/projects-2.jpeg" class="img-fluid" alt="project" />
+        <img src="img/projects-2.jpg" class="img-fluid" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="/img/projects-1.jpeg" class="img-fluid" alt="project" />
+        <img src="img/projects-1.jpg" class="img-fluid" alt="project" />
       </div>
       <!-- end of single project -->
     </div>
